--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   "license": "ISC",
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
-    "@smash-sdk/iam": "^0.0.1-alpha.12",
     "@types/bluebird": "^3.5.37",
     "@types/deep-equal": "^1.0.1",
     "@types/jest": "^28.1.8",
@@ -55,12 +54,12 @@
     "rollup": "^2.79.1"
   },
   "dependencies": {
-    "@smash-sdk/transfer": "^0.0.1-alpha.64",
+    "@smash-sdk/transfer": "^0.0.2",
     "bluebird": "^3.7.2",
     "deep-equal": "^2.1.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
-    "smash-sdk-core": "^0.0.1-alpha.53",
+    "smash-sdk-core": "^0.0.2",
     "uuid": "^8.3.2"
   }
 }
