--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smash-uploader",
-  "version": "0.0.1-alpha.25",
+  "version": "0.0.1",
   "description": "",
   "main": "./dist/SmashUploader.js",
   "files": [
@@ -33,7 +33,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@types/bluebird": "^3.5.37",
     "@types/deep-equal": "^1.0.1",
-    "@types/jest": "^28.1.8",
+    "@types/jest": "^29.2.2",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
@@ -44,22 +44,22 @@
     "jest-cli": "^29.2.2",
     "jest-extended": "^0.11.5",
     "path-browserify": "^1.0.1",
+    "rollup": "^2.79.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2",
-    "ts-jest": "^28.0.8",
-    "typescript": "^4.8.4",
-    "rollup": "^2.79.1"
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@smash-sdk/transfer": "^0.0.3",
+    "@smash-sdk/core": "^0.0.2",
+    "@smash-sdk/transfer": "^0.0.6",
     "bluebird": "^3.7.2",
     "deep-equal": "^2.1.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
-    "@smash-sdk/core": "^0.0.2",
     "uuid": "^8.3.2"
   }
 }
