added types for node

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/bluebird": "^3.5.37",
     "@types/deep-equal": "^1.0.1",
     "@types/jest": "^29.2.2",
+    "@types/node": "^18.11.9",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
