--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smash-sdk/uploader-js",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "",
   "main": "./dist/SmashUploader.js",
   "files": [
@@ -50,6 +50,7 @@
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-polyfill-node": "^0.11.0",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
